--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <button type="button" name="button" id="test">Test</button>
 
         </div>    
-            
+            <center><h3>* means loading</h3></center>
         <div id="guess"></div>
    </body>
 </html>
